envoy-config/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              log_format:
                json_format:
                  timestamp: '%START_TIME%'
                  method: '%REQ(:METHOD)%'
                  path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
                  protocol: '%PROTOCOL%'
                  response_code: '%RESPONSE_CODE%'
                  response_flags: '%RESPONSE_FLAGS%'
                  response_code_details: '%RESPONSE_CODE_DETAILS%'
                  bytes_received: '%BYTES_RECEIVED%'
                  bytes_sent: '%BYTES_SENT%'
                  duration: '%DURATION%'
                  upstream_response_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
                  forwarded_for: '%REQ(X-FORWARDED-FOR)%'
                  user_agent: '%REQ(USER-AGENT)%'
                  request_id: '%REQ(X-REQUEST-ID)%'
                  request_authority: '%REQ(:AUTHORITY)%'
                  upstream_host: '%UPSTREAM_HOST%'
              path: /dev/stdout
          codec_type: auto
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                lendi_customer_provider:
                  issuer: https://lala.lendi-dev.net/
                  forward: true
                  remote_jwks:
                    http_uri:
                      uri: https://lala.lendi-dev.net/.well-known/jwks.json
                      cluster: lendi-customer-development-cluster
                      timeout:
                        seconds: 5
                    cache_duration:
                      seconds: 600
              rules:
              - match:
                  prefix: /ping
                requires: null
              - match:
                  prefix: /service
                requires:
                  provider_name: lendi_customer_provider
              - match:
                  prefix: /health
                requires: null
              - match:
                  prefix: /
                requires:
                  provider_name: lendi_customer_provider
          - name: envoy.filters.http.local_ratelimit
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: http_local_rate_limiter
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - '*'
              request_headers_to_add:
              - header:
                  key: x-lendi-envoy
                  value: 'true'
                append: true
              routes:
              - match:
                  prefix: /ping
                route:
                  cluster: service-cluster
                typed_per_filter_config:
                  envoy.filters.http.local_ratelimit:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: http_local_rate_limiter
                    token_bucket:
                      max_tokens: 1700
                      tokens_per_fill: 1700
                      fill_interval: 60s
                    filter_enabled:
                      runtime_key: local_rate_limit_enabled
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
                    filter_enforced:
                      runtime_key: local_rate_limit_enforced
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
              - match:
                  prefix: /service
                route:
                  cluster: service-cluster
                typed_per_filter_config:
                  envoy.filters.http.local_ratelimit:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: http_local_rate_limiter
                    token_bucket:
                      max_tokens: 1700
                      tokens_per_fill: 1700
                      fill_interval: 60s
                    filter_enabled:
                      runtime_key: local_rate_limit_enabled
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
                    filter_enforced:
                      runtime_key: local_rate_limit_enforced
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
              - match:
                  prefix: /health
                direct_response:
                  status: 200
                  body:
                    inline_string: HEALTHY
  - address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 12000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains:
              - '*'
              routes:
              - match:
                  prefix: /stats
                route:
                  cluster: service_stats
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: lendi-customer-development-cluster
    connect_timeout: 1s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http_protocol_options: {}
        common_http_protocol_options:
          max_requests_per_connection: 1
    load_assignment:
      cluster_name: lendi-customer-development-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: lala.lendi-dev.net
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: lala.lendi-dev.net
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /etc/ssl/certs/ca-certificates.crt
  - name: service-cluster
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service
                port_value: 8080
  - name: service_stats
    connect_timeout: 0.250s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_stats
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
admin:
  access_log:
    name: envoy.access_loggers.file
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
      path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
